--- a/buildSrc/linux.gradle
+++ b/buildSrc/linux.gradle
@@ -45,6 +45,10 @@ def commonFlags = [
         "-fstack-protector",
         "-Wextra", "-Wall", "-Wformat-security", "-Wno-unused", "-Wno-parentheses", "-Werror=trampolines"] // warning flags
 
+if (System.env.CFLAGS) {
+    commonFlags = System.env.CFLAGS.tokenize(' ')
+}
+
 if (OS_ARCH == "i386") {
     commonFlags += "-m32"
 }
